src/test/ui/suggest-remove-refs-1.stderr
error[E0277]: the trait bound `&std::iter::Enumerate<std::slice::Iter<'_, {integer}>>: std::iter::Iterator` is not satisfied
  --> $DIR/suggest-remove-refs-1.rs:14:19
   |
LL |     for (i, n) in &v.iter().enumerate() {
   |                   ^^^^^^^^^^^^^^^^^^^^^
   |                   |
   |                   `&std::iter::Enumerate<std::slice::Iter<'_, {integer}>>` is not an iterator; maybe try calling `.iter()` or a similar method
   |                   help: consider removing 1 references `&`: `v.iter().enumerate()`
   |
   = help: the trait `std::iter::Iterator` is not implemented for `&std::iter::Enumerate<std::slice::Iter<'_, {integer}>>`
   = note: required by `std::iter::IntoIterator::into_iter`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0277"
